--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="fondoCardListaFelirgeses">#f5f5f5</color>
     <color name="colorHint">#888888</color>
     <color name="colorTextPrimary">#000000</color>
+    <color name="redFAB">#FF3B30</color>
 </resources>
