--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -120,5 +120,16 @@
         app:layout_constraintStart_toEndOf="@+id/lblEsLider"
         app:layout_constraintTop_toBottomOf="@+id/txtRol"/>
 
+    <ImageView
+        android:id="@+id/add_pending_user"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="AddToPending"
+        android:src="@drawable/notifications"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintVertical_bias="0.54" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
