--- a/app/src/main/res/layout/fragment_editar_usuario.xml
+++ b/app/src/main/res/layout/fragment_editar_usuario.xml
@@ -182,9 +182,7 @@
                         android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
-                        app:endIconTint="@color/azulPrincipal"
-                        app:hintTextColor="@color/azulPrincipal"
-                        app:startIconTint="@color/azulPrincipal">
+                        app:hintTextColor="@color/azulPrincipal">
 
                         <AutoCompleteTextView
                             android:id="@+id/autoCompleteTipoId"
@@ -210,9 +208,7 @@
                         android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
-                        app:endIconTint="@color/azulPrincipal"
-                        app:hintTextColor="@color/azulPrincipal"
-                        app:startIconTint="@color/azulPrincipal">
+                        app:hintTextColor="@color/azulPrincipal">
 
                         <AutoCompleteTextView
                             android:id="@+id/autoCompleteSexo"
@@ -237,9 +233,7 @@
                         android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
-                        app:endIconTint="@color/azulPrincipal"
-                        app:hintTextColor="@color/azulPrincipal"
-                        app:startIconTint="@color/azulPrincipal">
+                        app:hintTextColor="@color/azulPrincipal">
 
                         <AutoCompleteTextView
                             android:id="@+id/autoCompleteEstadoCivil"
@@ -578,9 +572,7 @@
                         android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
-                        app:endIconTint="@color/azulPrincipal"
-                        app:hintTextColor="@color/azulPrincipal"
-                        app:startIconTint="@color/azulPrincipal">
+                        app:hintTextColor="@color/azulPrincipal">
 
                         <AutoCompleteTextView
                             android:id="@+id/autoCompleteEstadoAtencion"
@@ -645,9 +637,7 @@
                         android:layout_height="60dp"
                         android:textColorHint="@color/secondary"
                         app:boxStrokeColor="@color/azulPrincipal"
-                        app:endIconTint="@color/azulPrincipal"
-                        app:hintTextColor="@color/azulPrincipal"
-                        app:startIconTint="@color/azulPrincipal">
+                        app:hintTextColor="@color/azulPrincipal">
 
                         <AutoCompleteTextView
                             android:id="@+id/autoCompleteRole"
