--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -49,6 +49,42 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- Contenedor para texto y checkbox -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/contenedorSeleccionados"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone">
+
+            <!-- Texto que muestra cuántos usuarios están seleccionados -->
+            <TextView
+                android:id="@+id/lblSeleccionados"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seleccionados: 0"
+                android:fontFamily="@font/roboto_regular"
+                android:textSize="18sp"
+                android:textColor="@color/txtResultados"
+                android:layout_marginStart="16dp"
+                android:layout_marginVertical="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <!-- Checkbox para seleccionar/deseleccionar todos -->
+            <CheckBox
+                android:id="@+id/checkbox_select_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Seleccionar Todos"
+                android:textColor="@color/txtResultados"
+                android:layout_margin="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contenedorLista"
             android:layout_width="match_parent"
@@ -79,6 +115,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_eliminar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/contBottomNav"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            app:backgroundTint="@color/onSelectedColorBotBar"
+            android:src="@drawable/ic_delete"
+            app:tint="@color/white"
+            android:visibility="invisible"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_anadir_feligres"
