--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -49,17 +49,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- Contenedor para texto y checkbox -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contenedorSeleccionados"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone">
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- Texto que muestra cuántos usuarios están seleccionados -->
             <TextView
                 android:id="@+id/lblSeleccionados"
                 android:layout_width="wrap_content"
@@ -71,9 +68,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginVertical="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="visible"/>
 
-            <!-- Checkbox para seleccionar/deseleccionar todos -->
             <CheckBox
                 android:id="@+id/checkbox_select_all"
                 android:layout_width="wrap_content"
@@ -82,7 +79,10 @@
                 android:textColor="@color/txtResultados"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintStart_toEndOf="@id/lblSeleccionados"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="visible"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,7 +91,7 @@
             android:layout_height="0dp"
             android:background="@color/fondoContenedorFiltro"
             android:paddingBottom="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
+            app:layout_constraintTop_toBottomOf="@+id/contenedorSeleccionados"
             app:layout_constraintBottom_toTopOf="@id/contBottomNav"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -120,14 +120,30 @@
             android:id="@+id/btn_eliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/contBottomNav"
+            android:importantForAccessibility="no"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
             app:backgroundTint="@color/onSelectedColorBotBar"
             android:src="@drawable/ic_delete"
-            app:tint="@color/white"
-            android:visibility="invisible"/>
+            app:tint="@color/white" />
+
+        <Button
+            android:id="@+id/btn_cancelar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancelar"
+            android:importantForAccessibility="no"
+            android:enabled="false"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="15dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_anadir_feligres"
