Errores en la ventana de pendientes corregidos.

--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -72,7 +72,8 @@
                 android:id="@+id/txtNoResultados"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No se encontraron coincidencias."
+                android:text="@string/no_hay_elementos_a_mostrar"
+                android:textSize="24sp"
                 android:visibility="gone"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
