--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -49,6 +49,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contenedorSeleccionados"
             android:layout_width="match_parent"
@@ -56,6 +57,17 @@
             app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/iconCancelar"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_cancelarx"
+                app:layout_constraintBottom_toTopOf="@id/lblSeleccionados"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="4dp" />
+
 
             <TextView
                 android:id="@+id/lblSeleccionados"
@@ -131,7 +143,7 @@
             app:tint="@color/white" />
 
         <Button
-            android:id="@+id/btn_cancelar"
+            android:id="@+id/btn_cancelara"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancelar"
