--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -49,172 +49,162 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contenedorSeleccionados"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/contenedorFiltros"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/iconCancelar"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_cancelarx"
-                app:layout_constraintBottom_toTopOf="@id/lblSeleccionados"
+                app:layout_constraintTop_toTopOf="@id/contenedorSeleccionados"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="4dp" />
+                android:layout_marginTop="8dp"
+                />
 
 
-            <TextView
-                android:id="@+id/lblSeleccionados"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Seleccionados: 0"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="18sp"
-                android:textColor="@color/txtResultados"
-                android:layout_marginStart="16dp"
-                android:layout_marginVertical="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:visibility="visible"/>
-
-            <CheckBox
-                android:id="@+id/checkbox_select_all"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Seleccionar Todos"
-                android:textColor="@color/txtResultados"
-                android:layout_margin="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/lblSeleccionados"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:visibility="visible"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/contenedorLista"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/fondoContenedorFiltro"
-            android:paddingBottom="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/contenedorSeleccionados"
-            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listaFeligreses"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_user" />
-
-            <TextView
-                android:id="@+id/txtNoResultados"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No se encontraron coincidencias."
-                android:visibility="gone"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_eliminar"
+        <TextView
+            android:id="@+id/lblSeleccionados"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:importantForAccessibility="no"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            app:backgroundTint="@color/onSelectedColorBotBar"
-            android:src="@drawable/ic_delete"
-            app:tint="@color/white" />
+            android:text="Seleccionados: 0"
+            android:fontFamily="@font/roboto_regular"
+            android:textSize="18sp"
+            android:textColor="@color/txtResultados"
+            android:layout_marginStart="16dp"
+            android:layout_marginVertical="8dp"
+            app:layout_constraintTop_toBottomOf="@id/iconCancelar"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/btn_cancelara"
+
+        <CheckBox
+            android:id="@+id/checkbox_select_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancelar"
-            android:importantForAccessibility="no"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-            app:layout_constraintStart_toStartOf="parent"
-            android:backgroundTint="@color/black"
-            android:textColor="@color/white"
-            android:layout_marginStart="15dp"
-            android:layout_marginBottom="15dp" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_anadir_feligres"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:importantForAccessibility="no"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            app:backgroundTint="@color/onSelectedColorBotBar"
-            android:src="@drawable/add"
-            app:tint="@color/white" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_enviar_sms"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:importantForAccessibility="no"
-            android:enabled="false"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/contBottomNav"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginBottom="15dp"
-            app:backgroundTint="@color/onSelectedColorBotBar"
-            android:src="@drawable/chat_bubble"
-            app:tint="@color/white" />
-
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:indeterminateTint="@color/onSelectedColorBotBar"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Seleccionar Todos"
+            android:textColor="@color/txtResultados"
+            android:layout_margin="8dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/lblSeleccionados"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/lblSeleccionados"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:visibility="visible"/>
 
-        <LinearLayout
-            android:id="@+id/contBottomNav"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/onSelectedColorBotBar"
-                android:theme="@style/BottomBarStyle"
-                app:menu="@menu/bottom_navigation_menu"
-                app:itemIconTint="@color/white"
-                app:itemTextColor="@color/white"/>
-        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contenedorLista"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/fondoContenedorFiltro"
+        android:paddingBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/contenedorSeleccionados"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listaFeligreses"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:itemCount="1"
+            tools:listitem="@layout/item_user" />
+
+        <TextView
+            android:id="@+id/txtNoResultados"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No se encontraron coincidencias."
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_eliminar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:backgroundTint="@color/onSelectedColorBotBar"
+        android:src="@drawable/ic_delete"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_anadir_feligres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:backgroundTint="@color/onSelectedColorBotBar"
+        android:src="@drawable/add"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_enviar_sms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        android:enabled="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@id/contBottomNav"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        app:backgroundTint="@color/onSelectedColorBotBar"
+        android:src="@drawable/chat_bubble"
+        app:tint="@color/white" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminateTint="@color/onSelectedColorBotBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/contBottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/onSelectedColorBotBar"
+            android:theme="@style/BottomBarStyle"
+            app:menu="@menu/bottom_navigation_menu"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"/>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
