--- a/app/src/main/res/layout/fragment_listar_feligreses.xml
+++ b/app/src/main/res/layout/fragment_listar_feligreses.xml
@@ -79,7 +79,7 @@
             android:fontFamily="@font/roboto_regular"
             android:textSize="18sp"
             android:textColor="@color/txtResultados"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="19dp"
             android:layout_marginVertical="8dp"
             app:layout_constraintTop_toBottomOf="@id/iconCancelar"
             app:layout_constraintStart_toStartOf="parent" />
@@ -90,8 +90,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Seleccionar Todos"
+            android:fontFamily="@font/roboto_regular"
             android:textColor="@color/txtResultados"
             android:layout_margin="8dp"
+            android:textSize="18sp"
             app:layout_constraintBaseline_toBaselineOf="@id/lblSeleccionados"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/lblSeleccionados"
