--- a/app/src/main/res/layout/sheet_filtros.xml
+++ b/app/src/main/res/layout/sheet_filtros.xml
@@ -360,7 +360,7 @@
                     android:layout_width="match_parent"
                     android:layout_marginStart="40dp"
                     android:layout_marginEnd="40dp"
-                    android:enabled="false"
+                    android:visibility="gone"
                     />
 
             </GridLayout>
