--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,5 +48,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/lblUsarHuella"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginVertical="100dp"
+            android:text="@string/lbl_Usar_Huella"
+            android:textSize="17sp"
+            android:textColor="@color/azulPrincipal"/>
     </LinearLayout>
 </ScrollView>
