GPUV-17 Toolbar creada.

--- a/app/src/main/res/layout/fragment_agregar_usuarios.xml
+++ b/app/src/main/res/layout/fragment_agregar_usuarios.xml
@@ -44,42 +44,9 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/azulPrincipal"
-                    android:orientation="horizontal"
-                    android:paddingVertical="10dp">
-
-
-                    <TextView
-                        android:id="@+id/tvTituloCrear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tituloAñadirUsuario"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:ignore="TextContrastCheck" />
-
-                    <ImageButton
-                        android:id="@+id/btnVolver"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="15dp"
-                        android:backgroundTint="#00FFFFFF"
-                        android:contentDescription="@string/boton_para_retroceder"
-                        android:src="@drawable/ic_arrow_back"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/white"
-                        tools:ignore="ImageContrastCheck" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <include
+                    android:id="@+id/toolbar"
+                    layout="@layout/toolbar"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
