--- a/app/src/main/res/layout/fragment_visualizar_usuario.xml
+++ b/app/src/main/res/layout/fragment_visualizar_usuario.xml
@@ -21,43 +21,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/azulPrincipal"
-                    android:orientation="horizontal"
-                    android:paddingVertical="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/tvTituloEditar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ver_usuario"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:ignore="TextContrastCheck" />
-
-                    <ImageButton
-                        android:id="@+id/imageButton"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="15dp"
-                        android:backgroundTint="#00FFFFFF"
-                        android:contentDescription="@string/boton_para_retroceder"
-                        android:src="@drawable/ic_arrow_back"
-                        app:tint="@color/white"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:ignore="ImageContrastCheck" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <include
+                    android:id="@+id/toolbar"
+                    layout="@layout/toolbar"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guide_line"
