--- a/app/src/main/res/layout/fragment_plantillas_mensajes.xml
+++ b/app/src/main/res/layout/fragment_plantillas_mensajes.xml
@@ -87,7 +87,9 @@
                 android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                 app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"
+                />
 
             <AutoCompleteTextView
                 android:id="@+id/groupsAutoCompleteTv"
@@ -98,7 +100,9 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/textViewGrupos"
                 app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-                app:layout_constraintEnd_toEndOf="@id/guidelineRight" />
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
+                android:visibility="gone"
+                />
 
             <EditText
                 android:id="@+id/etMensaje"
